--- a/src/components/global/GlobalStyle.scss
+++ b/src/components/global/GlobalStyle.scss
@@ -15,6 +15,12 @@ a {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
+.content {
+  img {
+    width: 100%;
+    object-fit: cover;
+  }
+}
 
 /* Config swiper */
 
